<?xml version="1.0"?>   <!-- version 1 -->
<package format="2">
  <name>spider_maestro_controller</name>
  <version>0.0.0</version>
  <description>The spider_maestro_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="anita@erlerobotics.com">Anita Inchauspe Berasain</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/maestro_controller</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="tuuzdu@mail.ru"></author>
  <author email="anita@erlerobotics.com">Anita Inchauspe Berasain</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>ament</buildtool_depend> <!-- catkin now its ament -->
  <build_depend>rclcpp</build_depend> <!-- ROS Client Library for C++ (rclcpp), instead of roscpp -->
  <!-- <build_depend>rospy</build_depend> not necessary in this package -->
  <build_depend>common_interfaces</build_depend> <!-- Contains common interface files (.msg and .srv)-->

  <exec_depend>rclcpp</exec_depend> <!-- instead of run_depend write exec_depend-->
  <!-- <run_depend>rospy</run_depend> not necessary -->
  <exec_depend>common_interfaces</exec_depend>
  
  <!-- ament test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <build_type>ament_cmake</build_type>	
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
